Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 22 nodes and 21 edges\n"
+      "Graph with 4 nodes and 3 edges\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +387,8 @@
     "        w_dataset,\n",
     "        w_algo_list,\n",
     "        w_sample_size,\n",
-    "        w_show_algo_comparsion,\n",
-    "        w_show_dataset_comparsion,\n",
+    "        # w_show_algo_comparsion,\n",
+    "        # w_show_dataset_comparsion,\n",
     "        w_show_verbose\n",
     "    ], style={\"padding\": \"16px\"}),\n",
     "    html.Div([\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,8 +409,8 @@
     "        Input(\"w_dataset\", \"value\"),\n",
     "        Input(\"w_algo_list\", \"value\"),\n",
     "        Input(\"w_sample_size\", \"value\"),\n",
-    "        Input(\"w_show_algo_comparsion\", \"value\"),\n",
-    "        Input(\"w_show_dataset_comparsion\", \"value\"),\n",
+    "        # Input(\"w_show_algo_comparsion\", \"value\"),\n",
+    "        # Input(\"w_show_dataset_comparsion\", \"value\"),\n",
     "        Input(\"w_show_verbose\", \"value\")\n",
     "    ]\n",
     ")\n",
@@ -447,7 +447,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x150e26790>"
+       "<IPython.lib.display.IFrame at 0x104151eb0>"
       ]
      },
      "metadata": {},
@@ -467,9 +467,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset: DM-HT.txt\n",
+      "algo_list: degree_centrality\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: CE-HT.txt\n",
+      "algo_list: degree_centrality\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: DM-HT_small.txt\n",
+      "algo_list: degree_centrality\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n"
+     ]
+    }
+   ],
    "source": [
     "centrality_measures = compute_algorithms(graph=di_graph, algorithms=algorithms_to_run, verbose=False)"
    ]
