--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -414,7 +414,8 @@
     "        Input(\"w_show_verbose\", \"value\")\n",
     "    ]\n",
     ")\n",
-    "def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
+    "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
+    "def update_output(dataset, algo_list, sample_size, show_verbose):\n",
     "    print(f\"dataset: {dataset}\")\n",
     "    print(f\"algo_list: {algo_list}\")\n",
     "    print(f\"sample_size: {sample_size}\")\n",
