--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -416,6 +416,8 @@
     ")\n",
     "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
     "def update_output(dataset, algo_list, sample_size, show_verbose):\n",
+    "    \n",
+    "    \n",
     "    print(f\"dataset: {dataset}\")\n",
     "    print(f\"algo_list: {algo_list}\")\n",
     "    print(f\"sample_size: {sample_size}\")\n",
@@ -487,6 +489,24 @@
       "show_verbose: []\n",
       "dataset: DM-HT_small.txt\n",
       "algo_list: degree_centrality\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: DM-HT_small.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: DM-HT_small.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'eigenvector_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: DM-HT_small.txt\n",
+      "algo_list: ['degree_centrality', 'out_degree_centrality', 'eigenvector_centrality', 'katz_centrality']\n",
       "sample_size: 25\n",
       "show_algo_comparsion: ['show']\n",
       "show_dataset_comparsion: []\n",
