--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -417,6 +417,13 @@
     "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
     "def update_output(dataset, algo_list, sample_size, show_verbose):\n",
     "    \n",
+    "    data_file = join(data_dir, 'DM-HT.txt')\n",
+    "    \n",
+    "    graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
+    "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=verbose, plot=plot)\n",
+    "    di_graph = undirected_to_directed(graph)\n",
+    "\n",
+    "    print(f\"{graph}\")\n",
     "    \n",
     "    print(f\"dataset: {dataset}\")\n",
     "    print(f\"algo_list: {algo_list}\")\n",
