Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -417,7 +417,8 @@
     "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
     "def update_output(dataset, algo_list, sample_size, show_verbose):\n",
     "    \n",
-    "    data_file = join(data_dir, 'DM-HT.txt')\n",
+    "    \n",
+    "    data_file = join(data_dir, dataset)\n",
     "    \n",
     "    graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
     "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=verbose, plot=plot)\n",
