--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -421,7 +421,7 @@
     "    data_file = join(data_dir, dataset)\n",
     "    \n",
     "    graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
-    "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=verbose, plot=plot)\n",
+    "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
     "    di_graph = undirected_to_directed(graph)\n",
     "\n",
     "    print(f\"{graph}\")\n",
@@ -515,6 +515,12 @@
       "show_verbose: []\n",
       "dataset: DM-HT_small.txt\n",
       "algo_list: ['degree_centrality', 'out_degree_centrality', 'eigenvector_centrality', 'katz_centrality']\n",
+      "sample_size: 25\n",
+      "show_algo_comparsion: ['show']\n",
+      "show_dataset_comparsion: []\n",
+      "show_verbose: []\n",
+      "dataset: DM-HT.txt\n",
+      "algo_list: degree_centrality\n",
       "sample_size: 25\n",
       "show_algo_comparsion: ['show']\n",
       "show_dataset_comparsion: []\n",
