Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -423,6 +423,8 @@
     "    graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
     "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
     "    di_graph = undirected_to_directed(graph)\n",
+    "    \n",
+    "    algo\n",
     "\n",
     "    print(f\"{graph}\")\n",
     "    \n",
