--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -424,7 +424,8 @@
     "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
     "    di_graph = undirected_to_directed(graph)\n",
     "    \n",
-    "    algo\n",
+    "    algorithms = [x for x in algorithms_to_run if x.name in algo_list]\n",
+    "    \n",
     "\n",
     "    print(f\"{graph}\")\n",
     "    \n",
