--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -425,7 +425,8 @@
     "    di_graph = undirected_to_directed(graph)\n",
     "    \n",
     "    algorithms = [x for x in algorithms_to_run if x.name in algo_list]\n",
-    "    \n",
+    "    centrality_measures = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)\n",
+    "\n",
     "\n",
     "    print(f\"{graph}\")\n",
     "    \n",
