--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,9 @@
     "from dash import Dash, dcc, html, Input, Output\n",
     "from jupyter_dash import JupyterDash\n",
     "import plotly.express as px\n",
+    "\n",
+    "import plotly.tools as tls\n",
+    "from plotly.offline import plot, iplot\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\""
