--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,84 @@
     "        if verbose:\n",
     "            print_log(f\"Result: '{__centrality}'\")\n",
     "            print_log(f\"=\"*50)\n",
-    "    return centrality_measures"
+    "    return centrality_measures\n",
+    "\n",
+    "def plot_network_graph(graph: nx.Graph, centrality_result: CentralityAlgorithmOutput) -> go.Figure:\n",
+    "    \"\"\"\n",
+    "    Plot the network graph\n",
+    "    \"\"\"\n",
+    "    pos = nx.spring_layout(graph)\n",
+    "    edge_x, node_x, edge_y, node_y = [], [], [], []\n",
+    "    \n",
+    "    for edge in graph.edges():\n",
+    "        x, y = edge\n",
+    "        x0, y0 = pos[x]\n",
+    "        x1, y1 = pos[y]\n",
+    "        edge_x.append(x0)\n",
+    "        edge_x.append(x1)\n",
+    "        edge_y.append(y0)\n",
+    "        edge_y.append(y1)\n",
+    "\n",
+    "    for node in graph.nodes():\n",
+    "        x, y = pos[node][0], pos[node][1]\n",
+    "        node_x.append(x)\n",
+    "        node_y.append(y)\n",
+    "    \n",
+    "    edge_trace = go.Scatter(\n",
+    "        x=edge_x, y=edge_y,\n",
+    "        line=dict(width=0.5, color='#888'),\n",
+    "        hoverinfo='none',\n",
+    "        mode='lines'\n",
+    "    )\n",
+    "\n",
+    "    node_trace = go.Scatter(\n",
+    "        x=node_x, y=node_y,\n",
+    "        mode='markers',\n",
+    "        hoverinfo='text',\n",
+    "        marker=dict(\n",
+    "            showscale=True,\n",
+    "            # colorscale options\n",
+    "            #'Greys' | 'YlGnBu' | 'Greens' | 'YlOrRd' | 'Bluered' | 'RdBu' |\n",
+    "            #'Reds' | 'Blues' | 'Picnic' | 'Rainbow' | 'Portland' | 'Jet' |\n",
+    "            #'Hot' | 'Blackbody' | 'Earth' | 'Electric' | 'Viridis' |\n",
+    "            colorscale='YlOrRd',\n",
+    "            reversescale=True,\n",
+    "            color=[],\n",
+    "            size=10,\n",
+    "            colorbar=dict(\n",
+    "                thickness=15,\n",
+    "                title='Node Connections',\n",
+    "                xanchor='left',\n",
+    "                titleside='right'\n",
+    "            ),\n",
+    "            line_width=2))\n",
+    "    \n",
+    "    node_centrality = []\n",
+    "    node_text = []\n",
+    "\n",
+    "    for node in graph.nodes():\n",
+    "        if node not in centrality_result.result:\n",
+    "            node_centrality.append(float(0))\n",
+    "            node_text.append(f\"Node: '{node}'<br>{convert_to_normal(centrality_result.name)}: {str(0)}\")\n",
+    "        else:\n",
+    "            node_centrality.append(centrality_result.result[node])\n",
+    "            node_text.append(f\"Node: '{node}'<br>{convert_to_normal(centrality_result.name)}: {str(centrality_result.result[node])}\")\n",
+    "    \n",
+    "    node_trace.marker.color = node_centrality\n",
+    "    node_trace.marker.cmax = max(node_centrality)\n",
+    "    node_trace.marker.cmin = min(node_centrality)\n",
+    "    node_trace.text = node_text\n",
+    "\n",
+    "    return go.Figure(data=[edge_trace, node_trace],\n",
+    "                    layout=go.Layout(\n",
+    "                        title=f'Output for \"{convert_to_normal(centrality_result.name)}\"',\n",
+    "                        titlefont_size=16,\n",
+    "                        showlegend=False,\n",
+    "                        hovermode='closest',\n",
+    "                        margin=dict(b=20, l=5, r=5, t=40),\n",
+    "                        xaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
+    "                        yaxis=dict(showgrid=False, zeroline=False, showticklabels=False))\n",
+    "                    )"
    ]
   },
   {
