--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -507,6 +507,11 @@
     "    algorithms = [x for x in algorithms_to_run if x.name in algo_list]\n",
     "    centrality_measures = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)\n",
     "\n",
+    "    html_output = []\n",
+    "\n",
+    "    for i, centrality_measure in enumerate(centrality_measures):\n",
+    "        plot_network_graph(graph=graph, centrality_result=centrality_measure).show()\n",
+    "\n",
     "\n",
     "    print(f\"{graph}\")\n",
     "    \n",
