--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -510,7 +510,8 @@
     "    html_output = []\n",
     "\n",
     "    for i, centrality_measure in enumerate(centrality_measures):\n",
-    "        plot_network_graph(graph=graph, centrality_result=centrality_measure).show()\n",
+    "        dcc.Graph(\n",
+    "            plot_network_graph(graph=graph, centrality_result=centrality_measure).show()\n",
     "\n",
     "\n",
     "    print(f\"{graph}\")\n",
