--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -502,8 +502,11 @@
     "    html_output = []\n",
     "\n",
     "    for i, centrality_measure in enumerate(centrality_measures):\n",
-    "        dcc.Graph(\n",
-    "            plot_network_graph(graph=graph, centrality_result=centrality_measure).show()\n",
+    "        html_output.append(\n",
+    "            dcc.Graph(\n",
+    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure).show()\n",
+    "\n",
+    "        )\n",
     "\n",
     "\n",
     "    print(f\"{graph}\")\n",
