Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -504,21 +504,25 @@
     "    for i, centrality_measure in enumerate(centrality_measures):\n",
     "        html_output.append(\n",
     "            dcc.Graph(\n",
-    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure).show()\n",
-    "\n",
+    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure),\n",
+    "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
+    "                id=f\"graph_{i}_{centrality_measure.name}\"\n",
+    "            )\n",
     "        )\n",
     "\n",
+    "    return html.Div(html_output)\n",
     "\n",
-    "    print(f\"{graph}\")\n",
+    "\n",
+    "    # print(f\"{graph}\")\n",
     "    \n",
-    "    print(f\"dataset: {dataset}\")\n",
-    "    print(f\"algo_list: {algo_list}\")\n",
-    "    print(f\"sample_size: {sample_size}\")\n",
-    "    print(f\"show_verbose: {show_verbose}\")\n",
+    "    # print(f\"dataset: {dataset}\")\n",
+    "    # print(f\"algo_list: {algo_list}\")\n",
+    "    # print(f\"sample_size: {sample_size}\")\n",
+    "    # print(f\"show_verbose: {show_verbose}\")\n",
     "\n",
-    "    return html.Div([\n",
-    "        html.H2(\"Centrality measures for \" + dataset),\n",
-    "    ])"
+    "    # return html.Div([\n",
+    "    #     html.H2(\"Centrality measures for \" + dataset),\n",
+    "    # ])"
    ]
   },
   {
