--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -26,6 +26,8 @@
     "from jupyter_dash import JupyterDash\n",
     "import plotly.express as px\n",
     "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
     "import plotly.tools as tls\n",
     "from plotly.offline import plot, iplot\n",
     "\n",
