--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -471,7 +471,7 @@
     "        w_sample_size,\n",
     "        # w_show_algo_comparsion,\n",
     "        # w_show_dataset_comparsion,\n",
-    "        w_show_verbose\n",
+    "        # w_show_verbose\n",
     "    ], style={\"padding\": \"16px\"}),\n",
     "    html.Div([\n",
     "        html.Div(id=\"w_output\")\n",
@@ -520,19 +520,7 @@
     "            )\n",
     "        )\n",
     "\n",
-    "    return html.Div(html_output)\n",
-    "\n",
-    "\n",
-    "    # print(f\"{graph}\")\n",
-    "    \n",
-    "    # print(f\"dataset: {dataset}\")\n",
-    "    # print(f\"algo_list: {algo_list}\")\n",
-    "    # print(f\"sample_size: {sample_size}\")\n",
-    "    # print(f\"show_verbose: {show_verbose}\")\n",
-    "\n",
-    "    # return html.Div([\n",
-    "    #     html.H2(\"Centrality measures for \" + dataset),\n",
-    "    # ])"
+    "    return html.Div(html_output)"
    ]
   },
   {
