--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -336,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 19 nodes and 19 edges\n"
+      "Graph with 24 nodes and 51 edges\n"
      ]
     }
    ],
@@ -544,7 +544,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1036f2f10>"
+       "<IPython.lib.display.IFrame at 0x11da47a00>"
       ]
      },
      "metadata": {},
