--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -565,9 +565,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py MGMA",
+   "display_name": "Python 3.9.13 ('mgma')",
    "language": "python",
-   "name": "mgma"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
