Work in progress

--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -336,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 24 nodes and 51 edges\n"
+      "Graph with 17 nodes and 16 edges\n"
      ]
     }
    ],
@@ -544,7 +544,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x11da47a00>"
+       "<IPython.lib.display.IFrame at 0x127f65100>"
       ]
      },
      "metadata": {},
