--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -336,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 17 nodes and 16 edges\n"
+      "Graph with 21 nodes and 20 edges\n"
      ]
     }
    ],
@@ -493,7 +493,7 @@
     "        Input(\"w_sample_size\", \"value\"),\n",
     "        # Input(\"w_show_algo_comparsion\", \"value\"),\n",
     "        # Input(\"w_show_dataset_comparsion\", \"value\"),\n",
-    "        Input(\"w_show_verbose\", \"value\")\n",
+    "        # Input(\"w_show_verbose\", \"value\")\n",
     "    ]\n",
     ")\n",
     "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
@@ -544,7 +544,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x127f65100>"
+       "<IPython.lib.display.IFrame at 0x1042d1100>"
       ]
      },
      "metadata": {},
