--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -402,7 +402,7 @@
     "app = JupyterDash(__name__)\n",
     "\n",
     "w_dataset = html.Div([\n",
-    "    html.Label(\"Dataset\"),\n",
+    "    html.Label(\"Dataset No. 1\"),\n",
     "    dcc.Dropdown(\n",
     "        id=\"w_dataset\",\n",
     "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
