--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -401,8 +401,18 @@
     "#------------------------------------\n",
     "app = JupyterDash(__name__)\n",
     "\n",
-    "w_dataset = html.Div([\n",
+    "w_dataset1 = html.Div([\n",
     "    html.Label(\"Dataset No. 1\"),\n",
+    "    dcc.Dropdown(\n",
+    "        id=\"w_dataset1\",\n",
+    "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
+    "        value=data_files[0],\n",
+    "        clearable=False\n",
+    "    )\n",
+    "], style={\"padding\": \"10px\"})\n",
+    "\n",
+    "w_dataset = html.Div([\n",
+    "    html.Label(\"Dataset No. 2\"),\n",
     "    dcc.Dropdown(\n",
     "        id=\"w_dataset\",\n",
     "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
