--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -411,10 +411,10 @@
     "    )\n",
     "], style={\"padding\": \"10px\"})\n",
     "\n",
-    "w_dataset = html.Div([\n",
+    "w_dataset2 = html.Div([\n",
     "    html.Label(\"Dataset No. 2\"),\n",
     "    dcc.Dropdown(\n",
-    "        id=\"w_dataset\",\n",
+    "        id=\"w_dataset2\",\n",
     "        options=[{\"label\": x, \"value\": x} for x in data_files],\n",
     "        value=data_files[0],\n",
     "        clearable=False\n",
