--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -476,7 +476,8 @@
     "app.layout = html.Div([\n",
     "    html.H1(\"Centrality measures\"),\n",
     "    html.Div([\n",
-    "        w_dataset,\n",
+    "        w_dataset1,\n",
+    "        w_dataset2,\n",
     "        w_algo_list,\n",
     "        w_sample_size,\n",
     "        # w_show_algo_comparsion,\n",
