--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -499,7 +499,8 @@
     "@app.callback(\n",
     "    Output(\"w_output\", \"children\"),\n",
     "    [\n",
-    "        Input(\"w_dataset\", \"value\"),\n",
+    "        Input(\"w_dataset1\", \"value\"),\n",
+    "        Input(\"w_dataset2\", \"value\"),\n",
     "        Input(\"w_algo_list\", \"value\"),\n",
     "        Input(\"w_sample_size\", \"value\"),\n",
     "        # Input(\"w_show_algo_comparsion\", \"value\"),\n",
@@ -508,7 +509,7 @@
     "    ]\n",
     ")\n",
     "# def update_output(dataset, algo_list, sample_size, show_algo_comparsion, show_dataset_comparsion, show_verbose):\n",
-    "def update_output(dataset, algo_list, sample_size):\n",
+    "def update_output(dataset1, dataset2, algo_list, sample_size):\n",
     "    \n",
     "    \n",
     "    data_file = join(data_dir, dataset)\n",
