--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -512,7 +512,8 @@
     "def update_output(dataset1, dataset2, algo_list, sample_size):\n",
     "    \n",
     "    \n",
-    "    data_file = join(data_dir, dataset)\n",
+    "    data_file1 = join(data_dir, dataset1)\n",
+    "    data_file2 = join(data_dir, dataset2)\n",
     "    show_verbose = False\n",
     "    \n",
     "    graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
