Work in progress

--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -516,9 +516,12 @@
     "    data_file2 = join(data_dir, dataset2)\n",
     "    show_verbose = False\n",
     "    \n",
-    "    graph = nx.read_edgelist(data_file, nodetype=str, data=((\"weight\", float),))\n",
-    "    graph = sample_graph(graph=graph, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
-    "    di_graph = undirected_to_directed(graph)\n",
+    "    graph1 = nx.read_edgelist(data_file1, nodetype=str, data=((\"weight\", float),))\n",
+    "    graph2 = nx.read_edgelist(data_file2, nodetype=str, data=((\"weight\", float),))\n",
+    "    graph1 = sample_graph(graph=graph1, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
+    "    graph2 = sample_graph(graph=graph2, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
+    "    di_graph1 = undirected_to_directed(graph1)\n",
+    "    di_graph2 = undirected_to_directed(graph2)\n",
     "    \n",
     "    algorithms = [x for x in algorithms_to_run if x.name in algo_list]\n",
     "    centrality_measures = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)\n",
