--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -524,8 +524,10 @@
     "    di_graph2 = undirected_to_directed(graph2)\n",
     "    \n",
     "    algorithms = [x for x in algorithms_to_run if x.name in algo_list]\n",
-    "    centrality_measures = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)\n",
     "\n",
+    "    centrality_measures1 = compute_algorithms(graph=graph1, algorithms=algorithms, verbose=show_verbose)\n",
+    "    centrality_measures2 = compute_algorithms(graph=graph2, algorithms=algorithms, verbose=show_verbose)\n",
+    "    \n",
     "    html_output = []\n",
     "\n",
     "    for i, centrality_measure in enumerate(centrality_measures):\n",
