--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -522,6 +522,10 @@
     "    graph2 = nx.read_edgelist(data_file2, nodetype=str, data=((\"weight\", float),))\n",
     "    graph1 = sample_graph(graph=graph1, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
     "    graph2 = sample_graph(graph=graph2, sample_size=sample_size, verbose=show_verbose, plot=False)\n",
+    "\n",
+    "    graph1.name = f\"{dataset1}\"\n",
+    "    graph2.name = f\"{dataset2}\"\n",
+    "\n",
     "    di_graph1 = undirected_to_directed(graph1)\n",
     "    di_graph2 = undirected_to_directed(graph2)\n",
     "    \n",
