--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -560,7 +560,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "centrality_measures1 = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)\n",
+    "centrality_measures2 = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)"
+   ]
   }
  ],
  "metadata": {
