--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -557,13 +557,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "centrality_measures1 = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)\n",
-    "centrality_measures2 = compute_algorithms(graph=graph, algorithms=algorithms, verbose=show_verbose)"
+    "centrality_measures1 = compute_algorithms(graph=graph, algorithms=algorithms_to_run, verbose=show_verbose)\n",
+    "centrality_measures2 = compute_algorithms(graph=graph, algorithms=algorithms_to_run, verbose=show_verbose)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(CentralityAlgorithmOutput(name='degree_centrality', result={'F46F5.10': 0.05, 'C16D9.5': 0.05, 'C27F2.5': 0.2, 'C16D9.4': 0.05, 'F22E5.1': 0.05, 'M6.3': 0.8, 'W02A11.2': 0.05, 'ZK1053.1': 0.05, 'T15D6.9': 0.05, 'ZK1225.1': 0.05, 'Y45G12C.1': 0.05, 'F28G4.3': 0.05, 'F32B4.1': 0.05, 'R05F9.1': 0.05, 'C06B8.2': 0.05, 'C09E10.2': 0.1, 'F54H12.1': 0.05, 'F41D3.9': 0.05, 'R05A10.7': 0.05, 'Y27F2A.6': 0.05, 'F15D3.1': 0.05}, options={'direction': 'both'}), CentralityAlgorithmOutput(name='degree_centrality', result={'F46F5.10': 0.05, 'C16D9.5': 0.05, 'C27F2.5': 0.2, 'C16D9.4': 0.05, 'F22E5.1': 0.05, 'M6.3': 0.8, 'W02A11.2': 0.05, 'ZK1053.1': 0.05, 'T15D6.9': 0.05, 'ZK1225.1': 0.05, 'Y45G12C.1': 0.05, 'F28G4.3': 0.05, 'F32B4.1': 0.05, 'R05F9.1': 0.05, 'C06B8.2': 0.05, 'C09E10.2': 0.1, 'F54H12.1': 0.05, 'F41D3.9': 0.05, 'R05A10.7': 0.05, 'Y27F2A.6': 0.05, 'F15D3.1': 0.05}, options={'direction': 'both'}))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, centrality_measure in enumerate(zip(centrality_measures1, centrality_measures2)):\n",
+    "    print(centrality_measure)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
