--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -536,13 +536,21 @@
     "    \n",
     "    html_output = []\n",
     "\n",
-    "    for i, centrality_measure in enumerate(centrality_measures):\n",
+    "    for i, centrality_measure in enumerate(zip(centrality_measures1, centrality_measures2)):\n",
+    "        centrality_measure1, centrality_measure2 = centrality_measure\n",
     "        html_output.append(\n",
-    "            dcc.Graph(\n",
-    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure),\n",
+    "            html.Div([\n",
+    "                dcc.Graph(\n",
+    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure1),\n",
     "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
     "                id=f\"graph_{i}_{centrality_measure.name}\"\n",
-    "            )\n",
+    "                ),\n",
+    "                dcc.Graph(\n",
+    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure2),\n",
+    "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
+    "                id=f\"graph_{i}_{centrality_measure.name}\"\n",
+    "                )\n",
+    "            ])\n",
     "        )\n",
     "\n",
     "    return html.Div(html_output)"
