--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -543,12 +543,12 @@
     "                dcc.Graph(\n",
     "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure1),\n",
     "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
-    "                id=f\"graph_{i}_{centrality_measure.name}\"\n",
+    "                id=f\"graph_{i}_{centrality_measure1.name}\"\n",
     "                ),\n",
     "                dcc.Graph(\n",
     "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure2),\n",
     "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
-    "                id=f\"graph_{i}_{centrality_measure.name}\"\n",
+    "                id=f\"graph_{i}_{centrality_measure2.name}\"\n",
     "                )\n",
     "            ])\n",
     "        )\n",
