--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -550,7 +550,7 @@
     "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
     "                id=f\"graph_{i}_{centrality_measure2.name}\"\n",
     "                )\n",
-    "            ])\n",
+    "            ], style={\"background\": \"white\",\"padding\": \"16px\",\"display\": \"flex\",\"flex-direction\": \"row\"})\n",
     "        )\n",
     "\n",
     "    return html.Div(html_output)"
