Work in progress

--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -542,12 +542,12 @@
     "        html_output.append(\n",
     "            html.Div([\n",
     "                dcc.Graph(\n",
-    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure1),\n",
+    "                figure=plot_network_graph(graph=graph1, centrality_result=centrality_measure1),\n",
     "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
     "                id=f\"graph_{i}_{centrality_measure1.name}\"\n",
     "                ),\n",
     "                dcc.Graph(\n",
-    "                figure=plot_network_graph(graph=graph, centrality_result=centrality_measure2),\n",
+    "                figure=plot_network_graph(graph=graph2, centrality_result=centrality_measure2),\n",
     "                style={\"width\": \"100%\", \"height\": \"100%\"},\n",
     "                id=f\"graph_{i}_{centrality_measure2.name}\"\n",
     "                )\n",
