Work in progress

--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -338,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 20 nodes and 20 edges\n"
+      "Graph with 15 nodes and 15 edges\n"
      ]
     }
    ],
@@ -577,7 +577,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13f85ddc0>"
+       "<IPython.lib.display.IFrame at 0x12c175820>"
       ]
      },
      "metadata": {},
