--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -308,11 +308,11 @@
     "    node_trace.marker.cmin = min(node_centrality)\n",
     "    node_trace.text = node_text\n",
     "\n",
-    "    graph_name = f\" Graph: '{graph.name}' \" if graph.name else \"\"\n",
+    "    graph_name = f\"Graph: '{graph.name}' \" if graph.name else \"Output for \"\n",
     "\n",
     "    return go.Figure(data=[edge_trace, node_trace],\n",
     "                    layout=go.Layout(\n",
-    "                        title=f'Output for {graph_name} \"{convert_to_normal(centrality_result.name)}\"',\n",
+    "                        title=f'{graph_name} \"{convert_to_normal(centrality_result.name)}\"',\n",
     "                        titlefont_size=16,\n",
     "                        showlegend=False,\n",
     "                        hovermode='closest',\n",
