Work in progress

--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -338,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph with 15 nodes and 15 edges\n"
+      "Graph with 22 nodes and 21 edges\n"
      ]
     }
    ],
@@ -577,7 +577,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12c175820>"
+       "<IPython.lib.display.IFrame at 0x12ed4ffa0>"
       ]
      },
      "metadata": {},
