--- a/src/lab1/src/notebooks/demo_algorithms.ipynb
+++ b/src/lab1/src/notebooks/demo_algorithms.ipynb
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Demo - Comparsion b/w algorithms"
+    "### Demo - Comparsion b/w algorithms"
    ]
   },
   {
