--- a/src/lab1/src/notebooks/demo_datasets.ipynb
+++ b/src/lab1/src/notebooks/demo_datasets.ipynb
@@ -558,6 +558,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo - Comparsion b/w different datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
